# itext2kg-examples

./: .gitignore  README.md  pyproject.toml
src/datasets/sanguo/: 001.txt  002.txt
src/itext2kg_exmaples/: __init__.py  text05.py  v07.py
