[project]
name = "itext2kg-exmaples"
version = "0.1.0"
description = "Shuyi's itext2kg-exmaples"
authors = [
    { name = "Shuyi", email = "" }
]
dependencies = [
    "itext2kg==0.0.5",
    "langchain==0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "pyvis>=0.3.2",
    "httpx>=0.27.2",
    "httpx-sse>=0.4.0",
    "pyjwt>=2.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/itext2kg_exmaples"]
